--- a/styles.css
+++ b/styles.css
@@ -28,15 +28,19 @@ h4 {
 
 
 img {
-  display: block;
-  width: 100%;
+  display:inline-block;
+  width: 50%;
+  text-align: center;
+
 }
+
 
 .images
 {
 display:inline-block;
 margin: 0px;
 padding: 0px;
+text-align: center;
 }
 #band
 
